bk_ida/gobmkida/c1/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:901:7: error: use of undeclared identifier 'byte_9AA88C'
v22 = byte_9AA88C[j]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:907:4: error: use of undeclared identifier 'byte_9AA88D'
|| byte_9AA88D[j] != 3 && v31[j + 21] == 1) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:927:26: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)( byte_9AA88C[k] - 1) >= 2u 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:932:5: error: use of undeclared identifier 'byte_9AA88D'
|| !byte_9AA88D[k] && v31[k + 21] == 2) ) 
    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:939:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[m] != 3 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:944:4: error: use of undeclared identifier 'byte_9AA88D'
|| byte_9AA88D[m] != 3 && ( unsigned __int8)( v31[m + 21] - 1) <= 2u) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/engine/persistent.c:992:80: error: use of undeclared identifier 'reading_cache'
memcpy( &persistent_reading_cache[v11], &persistent_reading_cache[99], sizeof( reading_cache)); 
                                                                               ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
